2005-01-04  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/display/gimpdisplayshell-close.c
	(gimp_display_shell_close_dialog): don't set the default response
	to Save to reduce the risk of accidentally saving an image (#162872).

2005-01-04  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainertreeview.c
	(gimp_container_tree_view_name_canceled): removed debug output.
	(gimp_container_tree_view_remove_item)
	(gimp_container_tree_view_clear_items): removed compiler warnings.

2005-01-03  Sven Neumann  <neumann@jpk.com>

	* libgimp/gimp.def: added missing symbols.

2005-01-03  Sven Neumann  <neumann@jpk.com>

	Merged from HEAD branch:

	* plug-ins/ifscompose/ifscompose.c: use g_free() to release memory
	allocated using g_malloc().

2005-01-03  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/common/fp.c: removed GtkFrame from dialog and replaced
	a call to free() by g_free().

2005-01-03  Sven Neumann  <sven@gimp.org>

	* etc/ps-menurc: another update from Eric Pierce.

2005-01-02  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/widgets/gimpsizebox.c
	* app/widgets/gimptemplateeditor.c: round displayed resolution
	instead of just casting to integer values. Use image size limits
	from libgimpbase/gimplimits.h instead of some arbitrary numbers.

2005-01-02  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/plug-ins/clothify.py
	* plug-ins/pygimp/plug-ins/foggify.py: Add layers to images
	before using them. Fixes bug #162707.

2005-01-02  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/gui/splash.c (splash_update): fixed display of progress
	labels in RTL environment.

2005-01-02  Sven Neumann  <sven@gimp.org>

	* etc/ps-menurc: updated PS keybindings contributed by Eric Pierce.

2005-01-02  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/widgets/gimpsizebox.c (gimp_size_box_constructor): fixed
	position of pixel and resolution labels.
