@@ -1,3 +1,10 @@
+2005-01-06  Sven Neumann  <sven@gimp.org>
+
+	Merged from HEAD branch:
+
+	* plug-ins/common/sparkle.c: applied patch from Shlomi Fish that
+	fixes more regressions in Sparkle plug-in (bug #132145).
+
 2005-01-04  Sven Neumann  <sven@gimp.org>
 
 	Merged from HEAD branch:
